# xstl

.github/workflows/: gpu-workflow.yml  test-amd-gpu.yml  test-cpp-interface.yml  test-nvidia-gpu.yml
benchmarks/binary_associator/alpaka/: CMakeLists.txt  binary_associator.cpp
benchmarks/binary_associator/cpu/: CMakeLists.txt
benchmarks/binary_associator/cuda/: CMakeLists.txt  binary_associator.cu
benchmarks/binary_associator/hip/: CMakeLists.txt  binary_associator.cpp
docs/: navtreedata.js
include/xstl/: xstl.hpp
include/xstl/cuda/internal/: device_unique.hpp
include/xstl/soa_template/: soa_common.hpp  soa_layout.hpp
tests/: CMakeLists.txt
tests/soa_template/: CMakeLists.txt
tests/soa_template/cpu/: CMakeLists.txt  soa_template.cpp
